name:                seal-binary
version:             1.0.0
synopsis:            Seal - binary serialization
description:         This package defines a type class for binary serialization,
                     helpers and instances.
license:             MIT
license-file:        LICENSE
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Seal.Binary.Class
                       Seal.Binary.Limit
                       Seal.Binary.SafeCopy

  other-modules:
                       Seal.Binary.Class.Core
                       Seal.Binary.Class.Primitive
                       Seal.Binary.Class.TH

  build-depends:       aeson
                     , base
                     , binary
                     , bytestring
                     , canonical-json
                     , seal-util
                     , cborg
                     , cereal
                     , containers
                     , digest
                     , formatting
                     , hashable
                     , lens
                     , micro-recursion-schemes
                     , safecopy
                     , safe-exceptions
                     , serokell-util
                     , tagged
                     , template-haskell
                     , text
                     , th-utilities
                     , time-units
                     , universum
                     , unordered-containers
                     , vector

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:       src
  default-language:     Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp


test-suite binary-test
  main-is:             test.hs
  other-modules:
                       Spec
                       Test.Seal.Binary.BiSerialize
                       Test.Seal.Binary.BiSizeBounds
                       Test.Seal.Binary.Cbor.CborSpec
                       Test.Seal.Binary.Helpers
                       Test.Seal.Binary.Helpers.GoldenRoundTrip
                       Test.Seal.Cbor.RefImpl
                       Test.Seal.Cbor.Canonicity

  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , seal-binary
                     , seal-util-test
                     , cborg
                     , cereal
                     , containers
                     , formatting
                     , generic-arbitrary
                     , half
                     , hedgehog
                     , hspec
                     , mtl
                     , pretty-show
                     , quickcheck-instances
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , text
                     , formatting
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
