
name:                seal-contract
version:             2.5.0
synopsis:            Smart contract language library and REPL
license:             BSD3
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.22

library

  exposed-modules:     Seal.Contract.Compile
                     , Seal.Contract.Eval
                     , Seal.Contract.Gas
                     , Seal.Contract.Native
                     , Seal.Contract.Native.Db
                     , Seal.Contract.Native.Internal
                     , Seal.Contract.Native.Time
                     , Seal.Contract.Native.Ops
                     , Seal.Contract.Native.Keysets
                     , Seal.Contract.Parse
                     , Seal.Contract.PersistPactDb
                     , Seal.Contract.Persist
                     , Seal.Contract.Persist.Pure
                     , Seal.Contract.Persist.MPTree
                     , Seal.Contract.Types.Exp
                     , Seal.Contract.Types.ExpParser
                     , Seal.Contract.Types.Gas
                     , Seal.Contract.Types.Hash
                     , Seal.Contract.Types.Info
                     , Seal.Contract.Types.Lang
                     , Seal.Contract.Types.Logger
                     , Seal.Contract.Types.Native
                     , Seal.Contract.Types.Parser
                     , Seal.Contract.Types.Persistence
                     , Seal.Contract.Types.Runtime
                     , Seal.Contract.Types.Orphans
                     , Seal.Contract.Types.Term
                     , Seal.Contract.Types.Type
                     , Seal.Contract.Types.Util
                     , Seal.Contract.Types.Version
                     , Crypto.Hash.Blake2Native
                     , Seal.Contract.Types.Typecheck
                     , Seal.Contract.Typechecker

  build-depends:       Decimal >= 0.4.2 && < 0.6
                     , aeson >= 0.11.3.0 && < 1.4.3
                     , algebraic-graphs >= 0.3 && < 0.4
                     , ansi-wl-pprint >= 0.6.7.3 && < 0.7
                     , attoparsec >= 0.13.0.2 && < 0.14
                     , base16-bytestring >=0.1.1.6 && < 0.2
                     , bound >= 2 && < 2.1
                     , bytestring >=0.10.8.1 && < 0.11
                     , cereal >=0.5.4.0 && < 0.6
                     , compactable >= 0.1 && < 0.2
                     , containers >= 0.5.7 && < 0.6
                     , data-default >= 0.7.1.1 && < 0.8
                     , deepseq >= 1.4.2.0 && < 1.5
                     , exceptions >= 0.8.3 && < 0.11
                     , hashable >= 1.2.4.0 && < 1.3
                     , lens >= 4.14 && <= 4.17
                     , lens-aeson >= 1.0.0.5 && < 1.1
                     , megaparsec >= 6
                     , mtl >= 2.2.1 && < 2.3
                     , old-locale >= 1.0.0.7 && < 1.1
                     , optparse-applicative >= 0.12.1.0 && < 0.15
                     , parsers >= 0.12.4 && < 0.13
                     , safe >= 0.3.11 && < 0.4
                     , scientific >= 0.3.4.9 && < 0.4
                     , semigroups >= 0.18.2 && < 0.19
                     , stm >= 2.4.4.1 && < 2.6
                     , text >= 1.2.2.1 && < 1.3
                     -- kadena ghcjs compat fork
                     , thyme == 0.3.6.0
                     , trifecta >= 2 && < 2.1
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , utf8-string >= 1.0.1.1 && < 1.1
                     , vector >= 0.11.0.0 && < 0.13
                     , vector-space >= 0.10.4 && < 0.16
                     , universum
                     , seal-binary
                     , seal-util
                     , seal-rocksdb
                     , seal-core
                     , seal-mpt
                     , base

  if !impl(ghcjs)
    build-depends:
        cryptonite
      , memory
      , yaml

  if !impl(ghcjs) && !os(windows)
    build-depends: unix

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-extensions:  GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                      --  MonadFailDesugaring
